--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ Server/Robot/debug/*.log
 Server/rtc_player/.vs/rtc_player/v15/Browse.VC.db
 Server/rtc_player/client.cfg
 Server/rtc_player/log/*.log
+Server/rtc_player/chensong_rtc_error.log
+Server/Robot/chensong_rtc_error.log
+Server/Robot/nvEncodeAPI64.dll
