--- a/Server/rtc_player/rtc_player.vcxproj
+++ b/Server/rtc_player/rtc_player.vcxproj
@@ -201,6 +201,9 @@
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="client.cfg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
