--- a/Server/rtc_player/rtc_player.vcxproj.filters
+++ b/Server/rtc_player/rtc_player.vcxproj.filters
@@ -211,4 +211,7 @@
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="client.cfg" />
+  </ItemGroup>
 </Project>
