--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,4 @@ Server/Robot/debug/*.log
 Server/rtc_player/.vs/rtc_player/v15/Browse.VC.db
 Server/rtc_player/client.cfg
 Server/rtc_player/log/*.log
+Server/rtc_player/*.log
