[stun 心跳包延迟 2500ms问题]

--- a/Server/rtc_player/rtc_player.vcxproj
+++ b/Server/rtc_player/rtc_player.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="cint2str.cpp" />
     <ClCompile Include="clog.cpp" />
     <ClCompile Include="clog_color.cpp" />
+    <ClCompile Include="cmain_wnd.cpp" />
     <ClCompile Include="cmsg_dispatch.cpp" />
     <ClCompile Include="cnet_types.cpp" />
     <ClCompile Include="cplayer.cpp" />
@@ -177,6 +178,7 @@
     <ClInclude Include="clog.h" />
     <ClInclude Include="clog_color.h" />
     <ClInclude Include="clog_define.h" />
+    <ClInclude Include="cmain_wnd.h" />
     <ClInclude Include="cmsg_base_id.h" />
     <ClInclude Include="cmsg_dispatch.h" />
     <ClInclude Include="cnet_types.h" />
