--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="cencoder.cpp" />
     <ClCompile Include="cglobal_config.cpp" />
     <ClCompile Include="cglobal_rtc.cpp" />
+    <ClCompile Include="cglobal_rtc_config.cpp" />
     <ClCompile Include="cguard_reply.cpp" />
     <ClCompile Include="cice_server.cpp" />
     <ClCompile Include="cifaddrs_android.cc" />
@@ -394,6 +395,7 @@
     <ClInclude Include="cfunction_view.h" />
     <ClInclude Include="cglobal_config.h" />
     <ClInclude Include="cglobal_rtc.h" />
+    <ClInclude Include="cglobal_rtc_config.h" />
     <ClInclude Include="cguard_reply.h" />
     <ClInclude Include="cice_server.h" />
     <ClInclude Include="cifaddrs_android.h" />
