--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -228,6 +228,8 @@
     <ClCompile Include="crtp_stream_send.cpp" />
     <ClCompile Include="crtx_paylod_des.cpp" />
     <ClCompile Include="crtx_stream.cpp" />
+    <ClCompile Include="csctp_association.cpp" />
+    <ClCompile Include="csctp_association_mgr.cpp" />
     <ClCompile Include="csdp_util.cpp" />
     <ClCompile Include="csender_report.cpp" />
     <ClCompile Include="cseq_manager.cpp" />
@@ -465,6 +467,8 @@
     <ClInclude Include="crtp_stream_send.h" />
     <ClInclude Include="crtx_paylod_des.h" />
     <ClInclude Include="crtx_stream.h" />
+    <ClInclude Include="csctp_association.h" />
+    <ClInclude Include="csctp_association_mgr.h" />
     <ClInclude Include="csdp_util.h" />
     <ClInclude Include="csender_report.h" />
     <ClInclude Include="cseq_manager.h" />
