--- a/Server/Robot/Robot.vcxproj.filters
+++ b/Server/Robot/Robot.vcxproj.filters
@@ -124,6 +124,7 @@
     <ClInclude Include="NvCodec\NvEncoder\NvEncoderD3D11.h">
       <Filter>NvCodec\NvEncoder</Filter>
     </ClInclude>
+    <ClInclude Include="cdata_channel.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cmsg_dispatch.cpp">
@@ -199,6 +200,7 @@
     <ClCompile Include="NvCodec\NvEncoder\NvEncoderD3D11.cpp">
       <Filter>NvCodec\NvEncoder</Filter>
     </ClCompile>
+    <ClCompile Include="cdata_channel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
