--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,4 @@ Server/enc_temp_folder/22ea6ccf3626047174cc6e6e133da35/crtp_header_extension_uri
 Server/Server/rtp/ 
 Server/www/www.7z 
 Server/enc_temp_folder/6a63a7a7b55755fe907e4ae328b4c1d0/crtc_transport.cpp 
+Server/www/render_name.exe
