--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,4 @@ Server/Server/rtp/
 Server/www/www.7z 
 Server/enc_temp_folder/6a63a7a7b55755fe907e4ae328b4c1d0/crtc_transport.cpp 
 Server/www/render_name.exe
+Server/enc_temp_folder/a1e8f9aceddd3f29344ad2169467afe/crtc_transport.cpp
