[缓存包的大小设置]

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,5 @@ Server/www/www.7z
 Server/enc_temp_folder/6a63a7a7b55755fe907e4ae328b4c1d0/crtc_transport.cpp 
 Server/www/render_name.exe
 Server/enc_temp_folder/a1e8f9aceddd3f29344ad2169467afe/crtc_transport.cpp
+Server/enc_temp_folder/bd72843c104fb58e60257caa5b52e528/crtp_stream_send.cpp
+Server/enc_temp_folder/61b8b671eaa15eabcef7f12cd0327810/crtc_transport.cpp
