[rtp header extmap ]

--- a/Server/bin/server.cfg
+++ b/Server/bin/server.cfg
@@ -2,8 +2,18 @@
 
 rtc_announced_ip = 192.168.1.175
 
-
-
+websocket_wan_port = 9000
 #rtc_wan_ip = 222.128.2.68
+rtc_min_port = 9001
+rtc_max_port = 9100
+
+rtc_wan_ip = 222.128.2.68
 
 #rtc_wan_ip = 192.168.1.175
+
+rtc_min_bitrate = 10000
+rtc_start_bitrate = 15000
+
+rtc_max_bitrate = 15000
+
+#stun_time_out = 10000
