--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,5 @@ Server/www/render_name.exe
 Server/enc_temp_folder/a1e8f9aceddd3f29344ad2169467afe/crtc_transport.cpp
 Server/enc_temp_folder/bd72843c104fb58e60257caa5b52e528/crtp_stream_send.cpp
 Server/enc_temp_folder/61b8b671eaa15eabcef7f12cd0327810/crtc_transport.cpp
+Server/enc_temp_folder/691be91d52b977db6125f51899899/RateCalculator.cpp
+Server/enc_temp_folder/ec94dfcd64b762cf81550d2df7a5cd4/capi_rtc_publish.cpp
