--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,4 @@ Server/enc_temp_folder/bd72843c104fb58e60257caa5b52e528/crtp_stream_send.cpp
 Server/enc_temp_folder/61b8b671eaa15eabcef7f12cd0327810/crtc_transport.cpp
 Server/enc_temp_folder/691be91d52b977db6125f51899899/RateCalculator.cpp
 Server/enc_temp_folder/ec94dfcd64b762cf81550d2df7a5cd4/capi_rtc_publish.cpp
+Server/enc_temp_folder/e71e63232c4329f45191386b51de64f5/crtc_transport.cpp
